[project]
name = "clock-rl"
version = "0.1.0"
description = "Training model for clock recognition using reinforcement learning"
authors = [
    {name = "Axel Darmouni", email = "axeldarmouni@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "datasets>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "python-dotenv>=1.0.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "qwen-vl-utils>=0.0.2",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "tensorboardx>=2.6.0",
    "vllm>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
